# Triss

./: .gitignore  CMakeLists.txt  README.md  package.json
core/: CMakeCache.txt  CMakeLists.txt  Makefile  SystemParserInfo.cpp  SystemParserInfo.h  cmake_install.cmake  main.cpp  triss
core/Headers/ProcessManager/: ProcessManager.h
core/Headers/parcer/: AbstractSystemParser.h  CpuInfoParser.h  MemInfoParser.h  PIDParser.h  ParseExecutor.h  UserInfoParser.h
core/Source/ProcessManager/: ProcessManager.cpp
core/Source/parser/: AbstractSystemParser.cpp  CpuInfoParser.cpp  MemInfoParser.cpp  PIDParser.cpp  ParseExecutor.cpp  UserInfoParser.cpp
routes/: index.js
views/: index.jade
